Fix overflow in rows, tweak lede image

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -34,6 +34,7 @@ header img {
   object-position: center;
   z-index: -1;
   max-width: 100vw;
+  width: 100vw;
 }
 
 header h1 {
